Network provision different OSes

--- a/auto/ansible/templates/linux_interfaces.j2
+++ b/auto/ansible/templates/linux_interfaces.j2
@@ -20,6 +20,12 @@ metric {{ n.v4.metric }}
 up ip route add {{ n.v4.static_route.network }} via {{ n.v4.static_route.gateway }}
 down ip route del {{ n.v4.static_route.network }} via {{ n.v4.static_route.gateway }}
 {% endif %}
+{% if 'alias' in n.v4 %}
+{% for a in n.v4.alias %}
+iface {{ n.name }} inet {{ n.v4.type }}
+address {{ a }}
+{% endfor %}
+{% endif %}
 {% endif %}
 {% if 'v6' in n %}
 iface {{ n.name }} inet6 {{ n.v6.type }}
@@ -32,6 +38,12 @@ metric {{ n.v6.metric }}
 {% if 'static_route' in n.v6 %}
 up ip route add {{ n.v6.static_route.network }} via {{ n.v6.static_route.gateway }}
 down ip route del {{ n.v6.static_route.network }} via {{ n.v6.static_route.gateway }}
+{% endif %}
+{% if 'alias' in n.v6 %}
+{% for a in n.v6.alias %}
+iface {{ n.name }} inet6 {{ n.v6.type }}
+address {{ a }}
+{% endfor %}
 {% endif %}
 {% endif %}
 
