Bugfix in nsd conf and building old version from ports

--- a/auto/ansible/templates/rssac028-appendix-a/nsd.conf.j2
+++ b/auto/ansible/templates/rssac028-appendix-a/nsd.conf.j2
@@ -44,7 +44,7 @@ zone:
 {% elif scenario == 5 %}{% for letter in "abcdefghijklm" %}
 zone:
 	name: "{{ letter }}.some-servers"
-	zonefile: "/root/scenarios/5/a.some-servers.zone"
+	zonefile: "/root/scenarios/5/{{ letter }}.some-servers.zone"
 
 {% endfor %}{% endif %}
 
