Trying metric on routes for centos/alma

--- a/auto/ansible/templates/centos_route6.j2
+++ b/auto/ansible/templates/centos_route6.j2
@@ -1,3 +1,3 @@
 {% if 'v6' in item and 'static_route' in item.v6 %}
-{{ item.v6.static_route.network }} via {{ item.v6.static_route.gateway }} dev {{ item.name }}
+{{ item.v6.static_route.network }} via {{ item.v6.static_route.gateway }} dev {{ item.name }} metric 1
 {% endif %}
