--- a/auto/ansible/templates/centos_route.j2
+++ b/auto/ansible/templates/centos_route.j2
@@ -1,3 +1,3 @@
 {% if 'v4' in item and 'static_route' in item.v4 %}
-{{ item.v4.static_route.network }} via {{ item.v4.static_route.gateway }} dev {{ item.name }}
+{{ item.v4.static_route.network }} via {{ item.v4.static_route.gateway }} dev {{ item.name }} metric 1
 {% endif %}
