Fixes for NetBSD network restart, resolvconf, centos route6 template

--- a/auto/ansible/templates/centos_route6.j2
+++ b/auto/ansible/templates/centos_route6.j2
@@ -1,4 +1,4 @@
-{% if 'v6' in item and 'static_route' in item.v6 %}
+{% if 'v6' in item and 'static_routes' in item.v6 %}
 {% for r in item.v6.static_routes %}
 {{ r.network }} via {{ r.gateway }} dev {{ item.name }} metric 1
 {% endfor %}
