--- a/auto/ansible/templates/bind.conf.j2
+++ b/auto/ansible/templates/bind.conf.j2
@@ -6,13 +6,19 @@ listen-on-v6 { {{ listen_addrs_6 | join(';') }}; };
 dnssec-enable yes;
 allow-transfer { any; };
 version "{{ software_name }}";
-{% if cfg.minimal_responses | default(false) %}
+{% if cfg.minimal_responses is defined %}
 minimal-responses {{ cfg.minimal_responses }};
 {% endif %}
-{% if cfg.cookie | default(false) %}
+{% if cfg.cookie is defined %}
 answer-cookie {{ cfg.cookie }};
 {% endif %}
-{% if cfg.v4_edns_size | default(false) %}
+{% if cfg.v4_edns_size is defined %}
 max-udp-size {{ cfg.v4_edns_size }};
 {% endif %}
 };
+
+{% if zone_cfg is defined %}
+{% for zone, file in zone_cfg %}
+zone "{{ zone }}" { type master; file "{{ file }}"; };
+{% endfor %}
+{% endif %}
