Fix leftover variable

--- a/auto/ansible/templates/systemd_bind.service.j2
+++ b/auto/ansible/templates/systemd_bind.service.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description={{ software_name }} service
+Description={{ service_name }} service
 After=syslog.target network-online.target
 
 [Service]
