Fix linking for bind and libuv on netbsd

--- a/auto/ansible/templates/rcd_bind.service.j2
+++ b/auto/ansible/templates/rcd_bind.service.j2
@@ -10,7 +10,14 @@ name="{{ service_name }}"
 desc="{{ service_name }} startup script"
 rcvar="{{ service_name }}_enable"
 
+{% if system.package == 'netbsd' %}
+{# XXX: netbsd build cannot find libuv.so.1 in /usr/pkg/lib although #}
+{#      pkg-config does report on it during configure. #}
+{#      Easy fix for now. #}
+command="LD_LIBRARY_PATH='/usr/pkg/lib:/usr/lib' {{ software_target_dir }}/sbin/named"
+{% else %}
 command="{{ software_target_dir }}/sbin/named"
+{% endif %}
 command_args="-c {{ software_target_dir }}/etc/bind/bind.conf"
 pidfile="{{ software_target_dir }}/etc/bind/bind.pid"
 
