Quote the pid filename in bind

--- a/auto/ansible/templates/bind.conf.j2
+++ b/auto/ansible/templates/bind.conf.j2
@@ -3,7 +3,7 @@ recursion no;
 empty-zones-enable no;
 listen-on { {{ listen_addrs | join(';') }}; };
 listen-on-v6 { {{ listen_addrs_6 | join(';') }}; };
-pid-file {{ software_target_dir }}/etc/bind/bind.pid;
+pid-file "{{ software_target_dir }}/etc/bind/bind.pid";
 dnssec-enable yes;
 allow-transfer { any; };
 version "{{ software_name }}";
