--- a/auto/ansible/templates/systemd_bind.service.j2
+++ b/auto/ansible/templates/systemd_bind.service.j2
@@ -3,9 +3,11 @@ Description={{ service_name }} service
 After=syslog.target network-online.target
 
 [Service]
-ExecStart={{ software_target_dir }}/sbin/named -f -c {{ software_target_dir }}/etc/bind/bind.conf
-ExecReload={{ software_target_dir }}/sbin/rndc -c {{ software_target_dir }}/etc/bind/bind.conf reload
-ExecStop={{ software_target_dir }}/sbin/rndc -c {{ software_target_dir }}/etc/bind/bind.conf stop
+Type=forking
+PIDFile={{ software_target_dir }}/etc/bind/bind.pid
+ExecStart={{ software_target_dir }}/sbin/named -c {{ software_target_dir }}/etc/bind/bind.conf
+ExecReload=/bin/kill -HUP $MAINPID
+ExecStop=/bin/kill -TERM $MAINPID
 
 [Install]
 WantedBy=multi-user.target
